--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
 
   <script>
     // === ЗАМЕНИ ЭТИ ЗНАЧЕНИЯ НА СВОИ ИЗ SUPABASE ===
-    const SUPABASE_URL = 'https://cpuoiglvjpiuwqfqvkkw.storage.supabase.co';
-    const SUPABASE_ANON_KEY = 'sb_publishable_twA_AdKUXWJJp2wdVJi69w_nOujRg_z';
+    const SUPABASE_URL = 'https://sb_publishable_twA_AdKUXWJJp2wdVJi69w_nOujRg_z';
+    const SUPABASE_ANON_KEY = 'sb_secret_Av01MJ-0z0xrE-fZJqQgdg_cq3BNtnU';
     const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
     // Получаем ID из URL: /ivan → id = ivan
@@ -299,3 +299,4 @@
 </body>
 
 </html>
+
