--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
 
   <script>
     // === ЗАМЕНИ ЭТИ ЗНАЧЕНИЯ НА СВОИ ИЗ SUPABASE ===
-    const SUPABASE_URL = 'https:cpuoiglvjpiuwqfqvkkw.supabase.co';
-    const SUPABASE_ANON_KEY = 'sb_publishable_twA_AdKUXWJJp2wdVJi69w_nOujRg_z';
+    const SUPABASE_URL = 'https://cpuoiglvjpiuwqfqvkkw.supabase.co';
+    const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImNwdW9pZ2x2anBpdXdxZnF2a2t3Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjYwNDYxMDksImV4cCI6MjA4MTYyMjEwOX0.4kR823mI2hO4k9-RxzNsPjPJp9Y-ti60dlTt_Ey-E4g';
     const supabaseClient = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
     // Получаем ID из URL: /ivan → id = ivan
@@ -299,6 +299,7 @@
 </body>
 
 </html>
+
 
 
 
