--- a/index.html
+++ b/index.html
@@ -93,7 +93,15 @@
   <div id="app">
     <h2>Загрузка...</h2>
   </div>
-
+function escapeHtml(text) {
+  if (typeof text !== 'string') return '';
+  return text
+    .replace(/&/g, '&amp;')
+    .replace(/</g, '&lt;')
+    .replace(/>/g, '&gt;')
+    .replace(/"/g, '&quot;')
+    .replace(/'/g, '&#039;');
+}
   <script>
     // === ЗАМЕНИ ЭТИ ЗНАЧЕНИЯ НА СВОИ ИЗ SUPABASE ===
     const SUPABASE_URL = 'https://cpuoiglvjpiuwqfqvkkw.supabase.co';
@@ -181,21 +189,76 @@
     }
 
     // =========== ПУБЛИЧНАЯ СТРАНИЦА ===========
-    async function showPublicSock(id) {
-      const { data, error } = await supabaseClient
-        .from('socks')
-        .select('*')
-        .eq('id', id)
-        .single();
+  async function showPublicSock(id) {
+  const { data, error } = await supabaseClient
+    .from('socks')
+    .select('*')
+    .eq('id', id)
+    .single();
 
-      if (error || !data) {
-        document.getElementById('app').innerHTML = `
-          <div class="sock-header">
-            <h2>Носок не найден ❄️</h2>
-            <p><a href="/" style="color:white;text-decoration:underline;">Создать свой</a></p>
-          </div>
-        `;
-        return;
+  if (error || !data) {
+    document.getElementById('app').innerHTML = `
+      <div class="sock-header">
+        <h2>Носок не найден ❄️</h2>
+        <p><a href="/" style="color:white;text-decoration:underline;">Создать свой</a></p>
+      </div>
+    `;
+    return;
+  }
+
+  let html = `
+    <div class="sock-header">
+      <h2>Рождественский носок</h2>
+      <h3>для ${escapeHtml(data.owner_name)}</h3>
+  `;
+
+  if (data.avatar_url) {
+    html += `<img src="${escapeHtml(data.avatar_url)}" class="sock-avatar" />`;
+  }
+
+  html += `</div>`;
+
+  // Форма подарка
+  html += `<h3 style="margin:20px 0;">Оставь подарок!</h3>`;
+
+  if (data.allow_text) {
+    html += `<div class="form-group"><textarea id="message" placeholder="Поздравление с Новым годом и Рождеством..."></textarea></div>`;
+  }
+
+  if (data.allow_files) {
+    html += `<div class="form-group"><input type="file" id="giftFile" accept=".png,.jpg,.jpeg,.gif,.pdf" /></div>`;
+  }
+
+  html += `<button type="button" onclick="submitGift('${escapeHtml(data.id)}', '${escapeHtml(data.contact_tg || '')}')">Отправить подарок</button>`;
+
+  // Кнопка перевода
+  if (data.payment_link) {
+    html += `<a href="${escapeHtml(data.payment_link)}" target="_blank" class="payment-btn">🎁 Отправить денежный подарок</a>`;
+  }
+
+  document.getElementById('app').innerHTML = html;
+
+  // Preview для изображений
+  const fileInput = document.getElementById('giftFile');
+  if (fileInput) {
+    fileInput.addEventListener('change', (e) => {
+      const file = e.target.files[0];
+      if (file && file.type.startsWith('image/')) {
+        const reader = new FileReader();
+        reader.onload = (ev) => {
+          let preview = document.getElementById('filePreview');
+          if (!preview) {
+            preview = document.createElement('img');
+            preview.id = 'filePreview';
+            preview.className = 'gift-preview';
+            fileInput.parentNode.appendChild(preview);
+          }
+          preview.src = ev.target.result;
+        };
+        reader.readAsDataURL(file);
+      }
+    });
+  }
       }
 
       let html = `
@@ -315,6 +378,7 @@ if (contactTg) {
 </body>
 
 </html>
+
 
 
 
