--- a/index.html
+++ b/index.html
@@ -206,16 +206,6 @@
     return;
   }
 
-  let html = `
-    <div class="sock-header">
-      <h2>Рождественский носок</h2>
-      <h3>для ${escapeHtml(data.owner_name)}</h3>
-  `;
-
-  if (data.avatar_url) {
-    html += `<img src="${escapeHtml(data.avatar_url)}" class="sock-avatar" />`;
-  }
-
   html += `</div>`;
 
   // Форма подарка
@@ -229,8 +219,8 @@
     html += `<div class="form-group"><input type="file" id="giftFile" accept=".png,.jpg,.jpeg,.gif,.pdf" /></div>`;
   }
 
-    html += `<button type="button" onclick="submitGift(window.sockData.id, window.sockData.contact_tg)">Отправить подарок</button>`;
-
+    html += `<div id="submitBtnContainer"></div>`;
+    
   // Кнопка перевода
   if (data.payment_link) {
     html += `<a href="${escapeHtml(data.payment_link)}" target="_blank" class="payment-btn">🎁 Отправить денежный подарок</a>`;
@@ -409,6 +399,7 @@ if (contactTg) {
 </body>
 
 </html>
+
 
 
 
