--- a/index.html
+++ b/index.html
@@ -206,7 +206,37 @@
     return;
   }
 
+  // ✅ ОБЪЯВЛЕНИЕ html
+  let html = `
+    <div class="sock-header">
+      <h2>Рождественский носок</h2>
+      <h3>для ${escapeHtml(data.owner_name)}</h3>
+  `;
+
+  if (data.avatar_url) {
+    html += `<img src="${escapeHtml(data.avatar_url)}" class="sock-avatar" />`;
+  }
+
   html += `</div>`;
+
+  // Форма подарка
+  html += `<h3 style="margin:20px 0;">Оставь подарок!</h3>`;
+
+  if (data.allow_text) {
+    html += `<div class="form-group"><textarea id="message" placeholder="Поздравление с Новым годом и Рождеством..."></textarea></div>`;
+  }
+
+  if (data.allow_files) {
+    html += `<div class="form-group"><input type="file" id="giftFile" accept=".png,.jpg,.jpeg,.gif,.pdf" /></div>`;
+  }
+
+  html += `<div id="submitBtnContainer"></div>`;
+
+  if (data.payment_link) {
+    html += `<a href="${escapeHtml(data.payment_link)}" target="_blank" class="payment-btn">🎁 Отправить денежный подарок</a>`;
+  }
+
+  document.getElementById('app').innerHTML = html;
 
   // Форма подарка
   html += `<h3 style="margin:20px 0;">Оставь подарок!</h3>`;
@@ -342,6 +372,7 @@ if (contactTg) {
 </body>
 
 </html>
+
 
 
 
