--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     }
 
     // =========== ПУБЛИЧНАЯ СТРАНИЦА ===========
-  async function showPublicSock(id) {
+ async function showPublicSock(id) {
   const { data, error } = await supabaseClient
     .from('socks')
     .select('*')
@@ -206,7 +206,7 @@
     return;
   }
 
-  // ✅ ОБЪЯВЛЕНИЕ html
+  // Формируем HTML
   let html = `
     <div class="sock-header">
       <h2>Рождественский носок</h2>
@@ -219,18 +219,51 @@
 
   html += `</div>`;
 
-    // Создаём кнопку через DOM
-const btnContainer = document.getElementById('submitBtnContainer');
-if (btnContainer) {
-  const btn = document.createElement('button');
-  btn.type = 'button';
-  btn.textContent = 'Отправить подарок';
-  btn.className = 'btn-class-if-needed'; // опционально
-  btn.onclick = () => {
-    submitGift(data.id, data.contact_tg || '');
-  };
-  btnContainer.appendChild(btn);
-}
+  // Форма подарка
+  html += `<h3 style="margin:20px 0;">Оставь подарок!</h3>`;
+
+  if (data.allow_text) {
+    html += `<div class="form-group"><textarea id="message" placeholder="Поздравление с Новым годом и Рождеством..."></textarea></div>`;
+  }
+
+  if (data.allow_files) {
+    html += `<div class="form-group"><input type="file" id="giftFile" accept=".png,.jpg,.jpeg,.gif,.pdf" /></div>`;
+  }
+
+  // Контейнер для кнопки
+  html += `<div id="submitBtnContainer"></div>`;
+
+  // Кнопка перевода
+  if (data.payment_link) {
+    html += `<a href="${escapeHtml(data.payment_link)}" target="_blank" class="payment-btn">🎁 Отправить денежный подарок</a>`;
+  }
+
+  // Рендерим HTML
+  document.getElementById('app').innerHTML = html;
+
+  // Создаём кнопку через DOM
+  const btnContainer = document.getElementById('submitBtnContainer');
+  if (btnContainer) {
+    const btn = document.createElement('button');
+    btn.type = 'button';
+    btn.textContent = 'Отправить подарок';
+    btn.style.cssText = `
+      width: 100%;
+      padding: 12px;
+      border: 1px solid #ddd;
+      border-radius: 10px;
+      background: var(--main);
+      color: white;
+      font-weight: bold;
+      cursor: pointer;
+      margin: 10px 0;
+    `;
+    btn.onclick = () => {
+      submitGift(data.id, data.contact_tg || '');
+    };
+    btnContainer.appendChild(btn);
+  }
+
   // Preview для изображений
   const fileInput = document.getElementById('giftFile');
   if (fileInput) {
@@ -252,7 +285,7 @@ if (btnContainer) {
       }
     });
   }
-      }
+}
    
   // =========== ОТПРАВКА ПОДАРКА ===========
     async function submitGift(sockId, contactTg) {
@@ -335,6 +368,7 @@ if (contactTg) {
 </body>
 
 </html>
+
 
 
 
