--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@ const id = path === '/' ? null : path.substring(1);
       const allowFiles = document.getElementById('allowFiles').checked;
       const paymentLink = document.getElementById('paymentLink').value.trim();
       const contactTg = document.getElementById('contactTg').value.trim();
-  if (contactTg && !contactTg.startsWith('@')) {
-  alert('Telegram username должен начинаться с @');
+// if (contactTg && !contactTg.startsWith('@')) {
+//   alert('Telegram username должен начинаться с @');
   return;
 }
       if (!sockId || !ownerName) { alert('Заполни обязательные поля!'); return; }
@@ -390,6 +390,7 @@ console.log('📤 Валиден ли JSON:', (() => {
 </body>
 
 </html>
+
 
 
 
