--- a/xmas-sock/index.html
+++ b/xmas-sock/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Рождественский носок</title>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Mountains+of+Christmas:wght@700&family=Nunito:wght@400;600&display=swap" rel="stylesheet">
   <style>
     :root {
       --main: #e74c3c;
@@ -14,13 +15,21 @@
     }
     * { box-sizing: border-box; margin: 0; padding: 0; }
     body {
-      font-family: 'Segoe UI', system-ui, sans-serif;
+      font-family: 'Nunito', 'Segoe UI', sans-serif;
       background: var(--light);
       color: var(--dark);
       line-height: 1.6;
       padding: 20px;
       max-width: 600px;
       margin: 0 auto;
+      background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="200" height="200" viewBox="0 0 200 200"><rect width="200" height="200" fill="%23fdf6f0"/><path d="M50,150 Q100,50 150,150" stroke="%23e74c3c" stroke-width="8" fill="none" stroke-linecap="round"/><circle cx="100" cy="100" r="20" fill="%2327ae60"/><circle cx="90" cy="85" r="5" fill="white"/><circle cx="110" cy="85" r="5" fill="white"/></svg>');
+      background-size: 200px;
+      background-repeat: repeat;
+      background-attachment: fixed;
+    }
+    h1, h2, h3 {
+      font-family: 'Mountains of Christmas', cursive;
+      color: var(--main);
     }
     .sock-header {
       background: var(--main);
@@ -30,6 +39,15 @@
       text-align: center;
       margin-bottom: 24px;
       box-shadow: 0 4px 12px rgba(231, 76, 60, 0.2);
+      position: relative;
+      overflow: hidden;
+    }
+    .sock-header::after {
+      content: "🎁";
+      position: absolute;
+      top: 10px;
+      right: 15px;
+      font-size: 24px;
     }
     .sock-avatar {
       width: 80px;
@@ -49,6 +67,7 @@
       border: 1px solid #ddd;
       border-radius: 10px;
       font-size: 16px;
+      font-family: inherit;
     }
     textarea {
       min-height: 100px;
@@ -74,6 +93,7 @@
       display: inline-block;
       width: 100%;
       font-weight: bold;
+      font-family: inherit;
     }
     .gift-preview {
       margin-top: 10px;
@@ -93,208 +113,261 @@
   <div id="app">
     <h2>Загрузка...</h2>
   </div>
+<script>
+  function escapeHtml(text) {
+    if (typeof text !== 'string') return '';
+    return text
+      .replace(/&/g, '&amp;')
+      .replace(/</g, '&lt;')
+      .replace(/>/g, '&gt;')
+      .replace(/"/g, '&quot;')
+      .replace(/'/g, '&#039;');
+  }
+  
+  const SUPABASE_URL = 'https://cpuoiglvjpiuwqfqvkkw.supabase.co';
+  const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImNwdW9pZ2x2anBpdXdxZnF2a2t3Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjYwNDYxMDksImV4cCI6MjA4MTYyMjEwOX0.4kR823mI2hO4k9-RxzNsPjPJp9Y-ti60dlTt_Ey-E4g';
+  const supabaseClient = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
-  <script>
-    // === ЗАМЕНИ ЭТИ ЗНАЧЕНИЯ НА СВОИ ИЗ SUPABASE ===
-    const SUPABASE_URL = 'https://cpuoiglvjpiuwqfqvkkw.storage.supabase.co';
-    const SUPABASE_ANON_KEY = 'sb_publishable_twA_AdKUXWJJp2wdVJi69w_nOujRg_z';
-    const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+  const path = window.location.pathname;
+  const id = path === '/' ? null : path.substring(1);
 
-    // Получаем ID из URL: /ivan → id = ivan
-    const path = window.location.pathname;
-    const id = path === '/' ? null : path.substring(1);
-
+  (async () => {
     if (id && id.length > 0) {
-      showPublicSock(id);
+      await showPublicSock(id);
     } else {
       showCreateForm();
     }
+  })();
 
-    // =========== СТРАНИЦА СОЗДАНИЯ ===========
-    function showCreateForm() {
+  function showCreateForm() {
+    document.getElementById('app').innerHTML = `
+      <div class="sock-header">
+        <h1>🎄 Создай свой носок</h1>
+        <p>Друзья оставят поздравления, открытки или подарок</p>
+      </div>
+      <div class="form-group">
+        <input id="sockId" placeholder="Уникальное имя (латиницей): например, ivan2025" />
+      </div>
+      <div class="form-group">
+        <input id="ownerName" placeholder="Твоё имя (для приветствия)" />
+      </div>
+      <div class="form-group">
+        <input id="avatarUrl" placeholder="Ссылка на фото (опционально)" />
+      </div>
+      <div class="form-group">
+        <label><input type="checkbox" id="allowText" checked /> Текстовые поздравления</label>
+      </div>
+      <div class="form-group">
+        <label><input type="checkbox" id="allowFiles" /> Открытки (GIF, PNG, PDF)</label>
+      </div>
+      <div class="form-group">
+        <input id="paymentLink" placeholder="Ссылка для перевода (PayPal, Revolut и т.д.)" />
+      </div>
+      <div class="form-group">
+        <input id="contactTg" placeholder="Твой Telegram (число или @username)" />
+      </div>
+      <button onclick="createSock()">Создать носок</button>
+    `;
+  }
+
+  async function createSock() {
+    const sockId = document.getElementById('sockId').value.trim();
+    const ownerName = document.getElementById('ownerName').value.trim();
+    const avatarUrl = document.getElementById('avatarUrl').value.trim();
+    const allowText = document.getElementById('allowText').checked;
+    const allowFiles = document.getElementById('allowFiles').checked;
+    const paymentLink = document.getElementById('paymentLink').value.trim();
+    const contactTg = document.getElementById('contactTg').value.trim();
+    if (!sockId || !ownerName) { alert('Заполни обязательные поля!'); return; }
+    if (!/^[a-zA-Z0-9_-]+$/.test(sockId)) { alert('ID может содержать только буквы, цифры, _ и -'); return; }
+
+    const { error } = await supabaseClient
+      .from('socks')
+      .insert([{
+        id: sockId,
+        owner_name: ownerName,
+        avatar_url: avatarUrl || null,
+        allow_text: allowText,
+        allow_files: allowFiles,
+        payment_link: paymentLink || null,
+        contact_tg: contactTg || null
+      }]);
+
+    if (error) { console.error(error); alert('Ошибка! Такой носок уже есть?'); return; }
+
+    const url = window.location.origin + '/' + sockId;
+    document.getElementById('app').innerHTML = `
+      <div class="success">
+        <h2>✅ Готово!</h2>
+        <p>Твой носок создан:</p>
+        <div style="background:white;padding:12px;border-radius:8px;margin:15px 0;word-break:break-all;">${url}</div>
+        <button onclick="navigator.clipboard.writeText('${url}')">Скопировать ссылку</button>
+        <p style="margin-top:15px;font-size:14px;color:#666;">Размести её в соцсетях!</p>
+      </div>
+    `;
+  }
+
+  async function showPublicSock(id) {
+    const { data, error } = await supabaseClient
+      .from('socks')
+      .select('*')
+      .eq('id', id)
+      .single();
+
+    if (error || !data) {
       document.getElementById('app').innerHTML = `
         <div class="sock-header">
-          <h1>🎄 Создай свой носок</h1>
-          <p>Друзья оставят поздравления, открытки или подарок</p>
-        </div>
-        <div class="form-group">
-          <input id="sockId" placeholder="Уникальное имя (латиницей): например, ivan2025" />
-        </div>
-        <div class="form-group">
-          <input id="ownerName" placeholder="Твоё имя (для приветствия)" />
-        </div>
-        <div class="form-group">
-          <input id="avatarUrl" placeholder="Ссылка на фото (опционально)" />
-        </div>
-        <div class="form-group">
-          <label><input type="checkbox" id="allowText" checked /> Текстовые поздравления</label>
-        </div>
-        <div class="form-group">
-          <label><input type="checkbox" id="allowFiles" /> Открытки (GIF, PNG, PDF)</label>
-        </div>
-        <div class="form-group">
-          <input id="paymentLink" placeholder="Ссылка для перевода (PayPal, Revolut и т.д.)" />
-        </div>
-        <div class="form-group">
-          <input id="contactTg" placeholder="Твой Telegram (@username) для уведомлений" />
-        </div>
-        <button onclick="createSock()">Создать носок</button>
-      `;
-    }
-
-    async function createSock() {
-      const sockId = document.getElementById('sockId').value.trim();
-      const ownerName = document.getElementById('ownerName').value.trim();
-      const avatarUrl = document.getElementById('avatarUrl').value.trim();
-      const allowText = document.getElementById('allowText').checked;
-      const allowFiles = document.getElementById('allowFiles').checked;
-      const paymentLink = document.getElementById('paymentLink').value.trim();
-      const contactTg = document.getElementById('contactTg').value.trim();
-
-      if (!sockId || !ownerName) { alert('Заполни обязательные поля!'); return; }
-      if (!/^[a-zA-Z0-9_-]+$/.test(sockId)) { alert('ID может содержать только буквы, цифры, _ и -'); return; }
-
-      const { error } = await supabase
-        .from('socks')
-        .insert([{
-          id: sockId,
-          owner_name: ownerName,
-          avatar_url: avatarUrl || null,
-          allow_text: allowText,
-          allow_files: allowFiles,
-          payment_link: paymentLink || null,
-          contact_tg: contactTg || null
-        }]);
-
-      if (error) { console.error(error); alert('Ошибка! Такой носок уже есть?'); return; }
-
-      const url = window.location.origin + '/' + sockId;
-      document.getElementById('app').innerHTML = `
-        <div class="success">
-          <h2>✅ Готово!</h2>
-          <p>Твой носок создан:</p>
-          <div style="background:white;padding:12px;border-radius:8px;margin:15px 0;word-break:break-all;">${url}</div>
-          <button onclick="navigator.clipboard.writeText('${url}')">Скопировать ссылку</button>
-          <p style="margin-top:15px;font-size:14px;color:#666;">Размести её в соцсетях!</p>
+          <h2>Носок не найден ❄️</h2>
+          <p><a href="/" style="color:white;text-decoration:underline;">Создать свой</a></p>
         </div>
       `;
+      return;
     }
 
-    // =========== ПУБЛИЧНАЯ СТРАНИЦА ===========
-    async function showPublicSock(id) {
-      const { data, error } = await supabase
-        .from('socks')
-        .select('*')
-        .eq('id', id)
-        .single();
+    let html = `
+      <div class="sock-header">
+        <h2>Рождественский носок</h2>
+        <h3>для ${escapeHtml(data.owner_name)}</h3>
+    `;
 
-      if (error || !data) {
-        document.getElementById('app').innerHTML = `
-          <div class="sock-header">
-            <h2>Носок не найден ❄️</h2>
-            <p><a href="/" style="color:white;text-decoration:underline;">Создать свой</a></p>
-          </div>
-        `;
+    if (data.avatar_url) {
+      html += `<img src="${escapeHtml(data.avatar_url)}" class="sock-avatar" />`;
+    }
+
+    html += `</div>`;
+    html += `<h3 style="margin:20px 0;">Оставь подарок!</h3>`;
+
+    if (data.allow_text) {
+      html += `<div class="form-group"><textarea id="message" placeholder="Поздравление с Новым годом и Рождеством..."></textarea></div>`;
+    }
+
+    if (data.allow_files) {
+      html += `<div class="form-group"><input type="file" id="giftFile" accept=".png,.jpg,.jpeg,.gif,.pdf" /></div>`;
+    }
+
+    html += `<div id="submitBtnContainer"></div>`;
+
+    if (data.payment_link) {
+      html += `<a href="${escapeHtml(data.payment_link)}" target="_blank" class="payment-btn">🎁 Отправить денежный подарок</a>`;
+    }
+
+    document.getElementById('app').innerHTML = html;
+
+    const btnContainer = document.getElementById('submitBtnContainer');
+    if (btnContainer) {
+      const btn = document.createElement('button');
+      btn.type = 'button';
+      btn.textContent = 'Отправить подарок';
+      btn.style.cssText = `
+        width: 100%;
+        padding: 12px;
+        border: 1px solid #ddd;
+        border-radius: 10px;
+        background: var(--main);
+        color: white;
+        font-weight: bold;
+        cursor: pointer;
+        margin: 10px 0;
+      `;
+      btn.onclick = () => {
+        submitGift(data.id, data.contact_tg || '');
+      };
+      btnContainer.appendChild(btn);
+    }
+
+    const fileInput = document.getElementById('giftFile');
+    if (fileInput) {
+      fileInput.addEventListener('change', (e) => {
+        const file = e.target.files[0];
+        if (file && file.type.startsWith('image/')) {
+          const reader = new FileReader();
+          reader.onload = (ev) => {
+            let preview = document.getElementById('filePreview');
+            if (!preview) {
+              preview = document.createElement('img');
+              preview.id = 'filePreview';
+              preview.className = 'gift-preview';
+              fileInput.parentNode.appendChild(preview);
+            }
+            preview.src = ev.target.result;
+          };
+          reader.readAsDataURL(file);
+        }
+      });
+    }
+  }
+   
+  async function submitGift(sockId, contactTg) {
+    const message = document.getElementById('message')?.value || '';
+    const fileInput = document.getElementById('giftFile');
+    let fileUrl = '';
+
+    if (fileInput?.files?.[0]) {
+      const file = fileInput.files[0];
+      const fileName = `${sockId}/${Date.now()}_${encodeURIComponent(file.name)}`;
+      
+      const { error: uploadError } = await supabaseClient
+        .storage
+        .from('gifts')
+        .upload(fileName, file);
+
+      if (uploadError) {
+        alert('Ошибка загрузки файла');
         return;
       }
 
-      let html = `
-        <div class="sock-header">
-          <h2>Рождественский носок</h2>
-          <h3>для ${data.owner_name}</h3>
-      `;
-      if (data.avatar_url) {
-        html += `<img src="${data.avatar_url}" class="sock-avatar" />`;
-      }
-      html += `</div>`;
-
-      // Форма подарка
-      html += `<h3 style="margin:20px 0;">Оставь подарок!</h3>`;
-
-      if (data.allow_text) {
-        html += `<div class="form-group"><textarea id="message" placeholder="Поздравление с Новым годом и Рождеством..."></textarea></div>`;
-      }
-
-      if (data.allow_files) {
-        html += `<div class="form-group"><input type="file" id="giftFile" accept=".png,.jpg,.jpeg,.gif,.pdf" /></div>`;
-      }
-
-      html += `<button onclick="submitGift('${data.id}', '${data.contact_tg || ''}')">Отправить подарок</button>`;
-
-      // Кнопка перевода
-      if (data.payment_link) {
-        html += `<a href="${data.payment_link}" target="_blank" class="payment-btn">🎁 Отправить денежный подарок</a>`;
-      }
-
-      document.getElementById('app').innerHTML = html;
-
-      // Preview для изображений
-      const fileInput = document.getElementById('giftFile');
-      if (fileInput) {
-        fileInput.addEventListener('change', (e) => {
-          const file = e.target.files[0];
-          if (file && file.type.startsWith('image/')) {
-            const reader = new FileReader();
-            reader.onload = (ev) => {
-              let preview = document.getElementById('filePreview');
-              if (!preview) {
-                preview = document.createElement('img');
-                preview.id = 'filePreview';
-                preview.className = 'gift-preview';
-                fileInput.parentNode.appendChild(preview);
-              }
-              preview.src = ev.target.result;
-            };
-            reader.readAsDataURL(file);
-          }
-        });
-      }
-    }
-
-    // =========== ОТПРАВКА ПОДАРКА ===========
-    async function submitGift(sockId, contactTg) {
-      const message = document.getElementById('message')?.value || '';
-      const fileInput = document.getElementById('giftFile');
-      let fileUrl = '';
-
-      // Загрузка файла
-      if (fileInput?.files?.[0]) {
-        const file = fileInput.files[0];
-        const fileName = `${sockId}/${Date.now()}_${file.name}`;
-        const { error: uploadError } = await supabase.storage
-          .from('gifts')
-          .upload(fileName, file);
-
-        if (uploadError) { alert('Не удалось загрузить файл'); return; }
-        const { data } = supabase.storage.from('gifts').getPublicUrl(fileName);
-        fileUrl = data.publicUrl;
-      }
-
-      // Сохраняем подарок в БД
-      const { error: giftError } = await supabase
+      const { data: urlData, error: urlError } = await supabaseClient
+        .storage
         .from('gifts')
-        .insert([{ sock_id: sockId, message, file_url: fileUrl || null }]);
+        .getPublicUrl(fileName);
 
-      if (giftError) { alert('Ошибка отправки'); return; }
-
-      // Уведомление владельцу (Telegram)
-      if (contactTg) {
-        // Вызываем Edge Function (настроим далее)
-        try {
-          await fetch('/api/notify', {
-            method: 'POST',
-            headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify({ sockId, contactTg, message, fileUrl })
-          });
-        } catch (e) { console.log('Не удалось отправить уведомление'); }
+      if (urlError) {
+        alert('Ошибка получения ссылки');
+        return;
       }
 
-      alert('🎁 Подарок отправлен! Спасибо!');
-      if (document.getElementById('message')) document.getElementById('message').value = '';
-      if (fileInput) fileInput.value = '';
-      const preview = document.getElementById('filePreview');
-      if (preview) preview.remove();
+      fileUrl = urlData?.publicUrl || '';
     }
-  </script>
+
+    const { error: giftError } = await supabaseClient
+      .from('gifts')
+      .insert([{ sock_id: sockId, message, file_url: fileUrl || null }]);
+
+    if (giftError) {
+      alert('Ошибка отправки');
+      return;
+    }
+
+    // ✅ ОТПРАВКА УВЕДОМЛЕНИЯ — БЕЗ ПРОВЕРКИ НА @
+    if (contactTg) {
+      try {
+        const response = await fetch('/api/notify', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json'
+          },
+          body: JSON.stringify({
+            sockId: sockId,
+            contactTg: contactTg,
+            message: message,
+            fileUrl: fileUrl
+          })
+        });
+
+        if (!response.ok) {
+          console.error('Ошибка уведомления:', await response.text());
+        }
+      } catch (e) {
+        console.error('Ошибка сети:', e);
+      }
+    }
+
+    alert('🎁 Подарок отправлен!');
+    if (document.getElementById('message')) document.getElementById('message').value = '';
+    if (fileInput) fileInput.value = '';
+    const preview = document.getElementById('filePreview');
+    if (preview) preview.remove();
+  }
+</script>
 </body>
 </html>
