--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name=" punitive="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Рождественский носок</title>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <link href="https://fonts.googleapis.com/css2?family=Mountains+of+Christmas:wght@700&family=Nunito:wght@400;600&display=swap" rel="stylesheet">
@@ -79,9 +79,12 @@
       border: none;
       font-weight: bold;
       cursor: pointer;
-      transition: opacity 0.2s;
+      transition: all 0.2s ease;
     }
-    button:hover { opacity: 0.9; }
+    button:hover { 
+      opacity: 0.9; 
+      transform: translateY(-2px);
+    }
     .payment-btn {
       background: #f39c12;
       padding: 14px;
@@ -94,13 +97,18 @@
       width: 100%;
       font-weight: bold;
       font-family: inherit;
+      transition: all 0.2s ease;
+    }
+    .payment-btn:hover {
+      background: #d35400;
+      transform: translateY(-2px);
     }
     .gift-preview {
       margin-top: 10px;
       max-width: 100%;
       border-radius: 8px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     }
-    .hidden { display: none; }
     .success {
       background: rgba(213, 245, 227, 0.95);
       padding: 15px;
@@ -109,29 +117,75 @@
       text-align: center;
     }
     .gifts-container {
-      margin-top: 25px;
-      padding: 18px;
+      margin-top: 30px;
+      padding: 20px;
       background: rgba(255, 255, 255, 0.15);
       border-radius: 12px;
       backdrop-filter: blur(5px);
       text-align: left;
     }
+    .gifts-title {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 15px;
+    }
+    .refresh-btn {
+      background: #3498db;
+      color: white;
+      border: none;
+      padding: 6px 12px;
+      border-radius: 6px;
+      font-size: 14px;
+      cursor: pointer;
+    }
     .gift-item {
       background: rgba(255, 255, 255, 0.95);
-      padding: 12px;
-      border-radius: 8px;
-      margin-bottom: 12px;
+      padding: 14px;
+      border-radius: 10px;
+      margin-bottom: 16px;
       color: var(--dark);
+      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+      opacity: 0;
+      transform: translateY(20px);
+      animation: fadeInUp 0.5s forwards;
+    }
+    @keyframes fadeInUp {
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+    .gift-from {
+      font-weight: bold;
+      color: var(--main);
+      margin-bottom: 6px;
+      font-size: 1.1em;
+    }
+    .gift-message {
+      margin: 8px 0;
+      color: #333;
     }
     .gift-file {
       display: block;
-      margin-top: 8px;
-      color: var(--main);
-      text-decoration: underline;
+      margin-top: 10px;
+      max-width: 100%;
+      border-radius: 8px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     }
     .no-gifts {
-      color: #888;
+      color: #aaa;
       font-style: italic;
+      text-align: center;
+      padding: 20px;
+    }
+    .new-badge {
+      background: var(--success);
+      color: white;
+      padding: 2px 6px;
+      border-radius: 4px;
+      font-size: 12px;
+      margin-left: 6px;
     }
   </style>
 </head>
@@ -155,6 +209,9 @@
   const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImNwdW9pZ2x2anBpdXdxZnF2a2t3Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjYwNDYxMDksImV4cCI6MjA4MTYyMjEwOX0.4kR823mI2hO4k9-RxzNsPjPJp9Y-ti60dlTt_Ey-E4g';
   const supabaseClient = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
+  let autoRefreshInterval = null;
+  let lastGiftCount = 0;
+
   const path = window.location.pathname;
   const id = path === '/' ? null : path.substring(1);
 
@@ -167,6 +224,9 @@
   })();
 
   function showCreateForm() {
+    // Очищаем интервал, если есть
+    if (autoRefreshInterval) clearInterval(autoRefreshInterval);
+    
     document.getElementById('app').innerHTML = `
       <div class="sock-header">
         <h1>🎄 Создай свой носок</h1>
@@ -185,45 +245,13 @@
         <label><input type="checkbox" id="allowText" checked /> Текстовые поздравления</label>
       </div>
       <div class="form-group">
-        <label><input type="checkbox" id="allowFiles" /> Открытки (GIF, PNG, PDF)</label>
+        <label><input type="checkbox" id="allowFiles" checked /> Открытки (GIF, PNG, JPG)</label>
       </div>
       <div class="form-group">
         <input id="paymentLink" placeholder="Ссылка для перевода (PayPal, Revolut и т.д.)" />
       </div>
       <button onclick="createSock()">Создать носок</button>
     `;
-  }
-
-  // Функция загрузки подарков
-  async function loadGifts(sockId, container) {
-    container.innerHTML = '<p>Загрузка подарков...</p>';
-    const { data, error } = await supabaseClient
-      .from('gifts')
-      .select('*')
-      .eq('sock_id', sockId)
-      .order('created_at', { ascending: false });
-
-    if (error || !data || data.length === 0) {
-      container.innerHTML = `<p class="no-gifts">Пока никто не оставил подарков ❄️</p>`;
-    } else {
-      let html = `<h4>🎁 Получено подарков: ${data.length}</h4>`;
-      data.forEach(gift => {
-        html += `<div class="gift-item">`;
-        if (gift.message) {
-          html += `<p>${escapeHtml(gift.message)}</p>`;
-        }
-        if (gift.file_url) {
-          const ext = gift.file_url.split('.').pop().toLowerCase();
-          if (['png', 'jpg', 'jpeg', 'gif'].includes(ext)) {
-            html += `<img src="${escapeHtml(gift.file_url)}" class="gift-preview" />`;
-          } else {
-            html += `<a href="${escapeHtml(gift.file_url)}" target="_blank" class="gift-file">📎 Открытка (${ext.toUpperCase()})</a>`;
-          }
-        }
-        html += `</div>`;
-      });
-      container.innerHTML = html;
-    }
   }
 
   async function createSock() {
@@ -258,17 +286,60 @@
         <button onclick="navigator.clipboard.writeText('${url}')">Скопировать ссылку</button>
         <p style="margin-top:15px;font-size:14px;color:#666;">Размести её в соцсетях!</p>
       </div>
-      <div class="gifts-container">
-        <h3>🎁 Твои подарки</h3>
-        <div id="giftsList"></div>
+    `;
+  }
+
+  // ЗАГРУЗКА ПОДАРКОВ (с поддержкой анимации новых)
+  async function loadGifts(sockId, container, isAutoRefresh = false) {
+    if (!isAutoRefresh) {
+      container.innerHTML = '<p>Загрузка подарков...</p>';
+    }
+    
+    const { data, error } = await supabaseClient
+      .from('gifts')
+      .select('*')
+      .eq('sock_id', sockId)
+      .order('created_at', { ascending: false });
+
+    if (error || !data) {
+      if (!isAutoRefresh) container.innerHTML = `<p class="no-gifts">Ошибка загрузки подарков</p>`;
+      return;
+    }
+
+    const newGiftCount = data.length;
+    const hasNewGifts = isAutoRefresh && newGiftCount > lastGiftCount;
+    lastGiftCount = newGiftCount;
+
+    let html = `
+      <div class="gifts-title">
+        <h3>🎁 Подарков: ${newGiftCount}</h3>
+        <button class="refresh-btn" onclick="loadGifts('${sockId}', document.getElementById('giftsList'))">🔄 Обновить</button>
       </div>
     `;
 
-    // Загружаем подарки для этого носка
-    loadGifts(sockId, document.getElementById('giftsList'));
+    if (newGiftCount === 0) {
+      html += `<p class="no-gifts">Пока никто не оставил подарков ❄️</p>`;
+    } else {
+      data.forEach((gift, index) => {
+        const isNew = hasNewGifts && index < (newGiftCount - lastGiftCount + (newGiftCount - lastGiftCount));
+        html += `<div class="gift-item"${isNew ? ' style="animation-delay: 0.1s;"' : ''}>`;
+        html += `<div class="gift-from">От: ${escapeHtml(gift.sender_name || 'Аноним')}${isNew ? ' <span class="new-badge">НОВЫЙ</span>' : ''}</div>`;
+        if (gift.message) {
+          html += `<div class="gift-message">${escapeHtml(gift.message)}</div>`;
+        }
+        if (gift.file_url) {
+          const ext = gift.file_url.split('.').pop().toLowerCase();
+          if (['png', 'jpg', 'jpeg', 'gif'].includes(ext)) {
+            html += `<img src="${escapeHtml(gift.file_url)}" class="gift-file" />`;
+          }
+        }
+        html += `</div>`;
+      });
+    }
+
+    container.innerHTML = html;
   }
 
-  // Страница носка — только форма, без подарков
   async function showPublicSock(id) {
     const { data, error } = await supabaseClient
       .from('socks')
@@ -277,6 +348,7 @@
       .single();
 
     if (error || !data) {
+      if (autoRefreshInterval) clearInterval(autoRefreshInterval);
       document.getElementById('app').innerHTML = `
         <div class="sock-header">
           <h2>Носок не найден ❄️</h2>
@@ -299,21 +371,34 @@
     html += `</div>`;
     html += `<h3 style="margin:20px 0;color:white;">Оставь подарок!</h3>`;
 
+    html += `<div class="form-group"><input id="senderName" placeholder="Твоё имя (как подписать подарок)" /></div>`;
+
     if (data.allow_text) {
       html += `<div class="form-group"><textarea id="message" placeholder="Поздравление с Новым годом и Рождеством..."></textarea></div>`;
     }
 
     if (data.allow_files) {
-      html += `<div class="form-group"><input type="file" id="giftFile" accept=".png,.jpg,.jpeg,.gif,.pdf" /></div>`;
+      html += `<div class="form-group"><input type="file" id="giftFile" accept=".png,.jpg,.jpeg,.gif" /></div>`;
     }
 
     html += `<div id="submitBtnContainer"></div>`;
+
+    html += `<div class="gifts-container"><div id="giftsList"></div></div>`;
 
     if (data.payment_link) {
       html += `<a href="${escapeHtml(data.payment_link)}" target="_blank" class="payment-btn">🎁 Отправить денежный подарок</a>`;
     }
 
     document.getElementById('app').innerHTML = html;
+
+    // Загружаем подарки впервые
+    loadGifts(id, document.getElementById('giftsList'));
+
+    // Запускаем автообновление каждые 20 секунд
+    if (autoRefreshInterval) clearInterval(autoRefreshInterval);
+    autoRefreshInterval = setInterval(() => {
+      loadGifts(id, document.getElementById('giftsList'), true);
+    }, 20000);
 
     // Кнопка отправки
     const btnContainer = document.getElementById('submitBtnContainer');
@@ -338,7 +423,7 @@
       btnContainer.appendChild(btn);
     }
 
-    // Preview файла
+    // Preview изображения
     const fileInput = document.getElementById('giftFile');
     if (fileInput) {
       fileInput.addEventListener('change', (e) => {
@@ -362,6 +447,7 @@
   }
    
   async function submitGift(sockId) {
+    const senderName = document.getElementById('senderName')?.value.trim() || 'Аноним';
     const message = document.getElementById('message')?.value || '';
     const fileInput = document.getElementById('giftFile');
     let fileUrl = '';
@@ -376,7 +462,7 @@
         .upload(fileName, file);
 
       if (uploadError) {
-        alert('Ошибка загрузки файла');
+        alert('Ошибка загрузки изображения');
         return;
       }
 
@@ -395,19 +481,35 @@
 
     const { error: giftError } = await supabaseClient
       .from('gifts')
-      .insert([{ sock_id: sockId, message, file_url: fileUrl || null }]);
+      .insert([{ 
+        sock_id: sockId, 
+        sender_name: senderName,
+        message: message || null, 
+        file_url: fileUrl || null 
+      }]);
 
     if (giftError) {
-      alert('Ошибка отправки');
+      alert('Ошибка отправки подарка');
       return;
     }
 
-    alert('🎁 Подарок отправлен!');
+    // Обновляем список
+    loadGifts(sockId, document.getElementById('giftsList'));
+
+    // Сбрасываем форму
+    if (document.getElementById('senderName')) document.getElementById('senderName').value = '';
     if (document.getElementById('message')) document.getElementById('message').value = '';
-    if (fileInput) fileInput.value = '';
-    const preview = document.getElementById('filePreview');
-    if (preview) preview.remove();
+    if (fileInput) {
+      fileInput.value = '';
+      const preview = document.getElementById('filePreview');
+      if (preview) preview.remove();
+    }
   }
+
+  // Очистка при уходе со страницы
+  window.addEventListener('beforeunload', () => {
+    if (autoRefreshInterval) clearInterval(autoRefreshInterval);
+  });
 </script>
 </body>
 </html>
